# kafka-speaker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/kafka_speaker/: __about__.py  __init__.py  cli.py  paragraph.py  parse.py  slack.py  speaker.py
tests/: test_chunk.py  test_paragraph.py  test_slack.py  test_speaker.py
tests/data/: pg30570-kafka-grosser-larm.txt  pg69327-kafka-der-prozess.txt
tests/data/short_output/: conversations.json
tests/data/short_output/attachments/: ATT0000003.md
