[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kafka-speaker"
dynamic = ["version"]
description = 'Generates test Slack data via OpenAI API.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Lawrence Moorehead", email = "lawrence.moorehead@elemdiscovery.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["openai", "requests"]

[project.urls]
Documentation = "https://github.com/Lawrence Moorehead/kafka-speaker#readme"
Issues = "https://github.com/Lawrence Moorehead/kafka-speaker/issues"
Source = "https://github.com/Lawrence Moorehead/kafka-speaker"

[tool.hatch.version]
path = "src/kafka_speaker/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kafka_speaker tests}"

[tool.coverage.run]
source_pkgs = ["kafka_speaker", "tests"]
branch = true
parallel = true
omit = [
  "src/kafka_speaker/__about__.py",
]

[tool.coverage.paths]
kafka_speaker = ["src/kafka_speaker", "*/kafka-speaker/src/kafka_speaker"]
tests = ["tests", "*/kafka-speaker/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
